[package]
name = "zcam"
version = "0.1.0"
authors = ["Olivier Hécart <olivier.hecart@adlinktech.com", 
           "kydos <angelo@icorsaro.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = {git = "https://github.com/eclipse-zenoh/zenoh", branch="master"}
futures = "0.3.15"
clap = "2"
log = "0.4"
env_logger = "0.8.3"
opencv = "0.53.0"

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]

[[bin]]
name = "zdisplay"
test = false
bench = false
path = "src/display.rs"

[[bin]]
name = "zcapture"
test = false
bench = false
path = "src/capture.rs"